--- a/css/style.css
+++ b/css/style.css
@@ -1,118 +1,124 @@
+@media (min-device-width: 426px) {
 .main {
-position: relative;
-width: 1219px;
-margin-right: auto;
-margin-left: auto;
-top: 30px;
+  width: 1219px;
+  margin: auto;
+} 
+.the_problem, .PiedPiperCoin {
+  margin: 2% 10% 2% 10%;
+  padding: 2% 5% 2% 5%; 
+}  
 }
-
-p, h1, h3 {
-margin: 0px;
-padding: 0px;
-}
-header {
-background: green;
-position: fixed;
-margin: auto;
-width: 1219px;
-height: 40px;
-top: 0px;
-}
-.logo {
-position: absolute;
-left: 20%;
-top: 25%;
-}
-nav {
-color: white;
-position: absolute;
-right: 20%;
-}
-A, A:visited, A:active {
-color: white;
-text-decoration: none;
-}
-a img {
-border: none;
-}
-.underlogo {
-background-image: url(image/underlogo.png);
-background-size: 100% 100%;
-width: 1219px;
-height: 400px;
-}
-.underlogo p{
-text-align: center;
-color: white;
-font: 32pt sans-serif;
-line-height: 400px;
+@media (max-device-width: 425px) {  
+.main {
+  margin: auto;
 }
 .the_problem, .PiedPiperCoin {
-background: #f5f5f5;
-width: 1219px;
-margin: auto;
+  padding: 2% 5% 2% 5%;
+}
+} 
+
+p, h1, h3 {
+  margin: 0px;
+  padding: 0px;
+}
+header {
+  background: green;
+  position: fixed;
+  margin: auto;
+  width: 100%;
+  height: 40px;
+  top: 0px;
+}
+.logo {
+  position: absolute;
+  left: 20%;
+  top: 20%;
+}
+nav {
+  color: white;
+  position: absolute;
+  right: 20%;
+}
+a, a:visited, a:active {
+  color: white;
+  text-decoration: none;
+}
+a img {
+  width: 30%;
+}
+.underlogo {
+  background-image: url(image/underlogo.png);
+  background-size: 100% 100%;
+  margin-top: 40px;
+}
+.underlogo p{
+  text-align: center;
+  color: white;
+  font: 32pt sans-serif;
+  line-height: 400px;
+}
+.the_problem, .PiedPiperCoin {
+  background: #f5f5f5;
 }
 h1 {
-color: green;
-text-align: center;
+  color: green;
+  text-align: center;
+  margin-bottom: 30px;
 }
 .the_problem, .PiedPiperCoin p {
-font-size: 26px;
+  font-size: 26px;
 }
 .blue_mid {
-background-image: url(image/blue_mid.png);
-background-size: 100% 100%;
-width: 1219px;
-height: 400px;
+  background-image: url(image/blue_mid.png);
+  background-size: 100% 100%;
+  height: 400px;
 }
 .blue_mid_text {
-margin: auto;
-width: 1219px;
-height: 300px;
+  margin: auto;
+  height: 300px;
 }
 .blue_mid_text p {
-padding-left: 20%;
-padding-right: 20%;
-padding-top: 14%;
-padding-bottom: 14%;
-text-align: center;
-color: white;
-font: 20pt sans-serif;
-font-style: oblique;
+  padding: 14% 20% 14% 20%;
+  text-align: center;
+  color: white;
+  font: 20pt sans-serif;
+  font-style: oblique;
 }
 .cell1 {
-margin: 20px;
-padding: 20px;
+  margin: 20px;
+  padding: 20px;
+}
+.cell1 img {
+  width: 60px;
+  height: 60px;
 }
 .the_team {
-background: #f5f5f5;
-width: 1219px;
-margin: auto;
-padding-top: 30px;
+  background: #f5f5f5;
+  margin: auto;
+  padding-top: 30px;
 }
 .flex {
-display: flex;
-margin: auto;
-width: 800px;
-flex-flow: row wrap;
-justify-content: center;
+  display: flex;
+  margin: auto;
+  width: 800px;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 figcaption {
-text-align: center;
+  text-align: center;
 } 
 figcaption h3{
-color: green;
+  color: green;
 } 
 .footer {
-background: #333333;
-width: 1219px;
-height: 130px;
-color: white;
+  background: #333333;
+  height: 130px;
+  color: white;
 }
 .footer_text {
-margin: auto;
-width: 350px;
-height: 50px;
-text-align: center;
-padding-top: 30px;
+  margin: auto;
+  width: 350px;
+  height: 50px;
+  text-align: center;
+  padding-top: 30px;
 }
